--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
+
+            <div class="destination" id="Venezuela">
+                <h2>Venezuela</h2>
+            </div>
+
         </div>
     </div>
 
